--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,30 +1,32 @@
  <div class="user-details">
-  <h1> My Expertise </h1>
+  <h1> Niche Expertise </h1>
   <p> {{site.user_description}} </p>
 </div>
   <div class="user">
     <div class="tech">
-      <h2>Design</h2>
+      <h2>Finance</h2>
       <i class="devicon-html5-plain-wordmark"></i>
       <i class="devicon-bootstrap-plain-wordmark colored"></i>
       <i class="devicon-sass-original colored"></i>
-      <p>Mumblecore hexagon kombucha, pitchfork four loko raclette intelligentsia master cleanse.
-        Vinyl XOXO lumbersexual</p>
+      <p>Info about finance</p>
     </div>
     <div class="tech">
-      <h2>Code</h2>
-      <i class="devicon-javascript-plain colored"></i>
-      <i class="devicon-react-original-wordmark colored"></i>
-      <i class="devicon-nodejs-plain-wordmark"></i>
-      <p>Mumblecore hexagon kombucha, pitchfork four loko raclette intelligentsia master cleanse.
-        Vinyl XOXO lumbersexual</p>
+      <h2>Software Development</h2>
+      <i class="devicon-python-plain-wordmark colored"></i>
+      <i class="devicon-apache-line-wordmark colored"></i>
+      <i class="devicon-docker-plain-wordmark colored"></i>
+      <p>Some info about the value I offer with coding</p>
     </div>
     <div class="tech">
-      <h2>Tools</h2>
-      <i class="devicon-git-plain"></i>
-      <i class="devicon-gulp-plain colored"></i>
+      <h2>Machine Learning</h2>
+      <i class="devicon-github-plain-wordmark colored"></i>
+      <i> 
+        <img alt="keras" src="{{ "/assets/img/keras.ico" | prepend: site.baseurl }}" />
+      </i>
+      <i> 
+        <img alt="tf" src="{{ "/assets/img/tensorflow.svg" | prepend: site.baseurl }}" />
+      </i>
       <i class="devicon-atom-original-wordmark"></i>
-      <p>Mumblecore hexagon kombucha, pitchfork four loko raclette intelligentsia master cleanse.
-        Vinyl XOXO lumbersexual</p>
+      <p>info about machine learning</p>
     </div>
 </div>
