--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -3,27 +3,63 @@
 </div>
 <div class="user-projects">
   <div class="images-right">
-    <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
+    <img alt="hedge_fund" src="{{ "/assets/img/hedge_fund.jpg" | prepend: site.baseurl }}" />
   </div>
-  <div class="contents">
-    <h3> Project Title </h3>
+  <div class="contents-left">
+    <h3> Hedge Fund Optimization and Automation </h3>
     <ul>
-      <li> Featured Skills</li>
+      <li> R </li>
+      <li> Shiny </li>
+      <li> Tradestation® </li> 
+      <li> Risk management optimization</li>
     </ul>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-    <a class="project-link" href="#">Check it out</a>
+    <p>Hedge funds required a fully-automated trading platform from trade creation to trade submission and risk tolerance management. I planned and developed the hedge fund’s derivatives trading platform. The algorithmic side of the hedge fund required expertise in both supervised and unsupervised machine learning algorithms. I was recognized as the subject matter expert for tactical coding of trading algorithms in Object-Oriented Easy Language®.</p>
+    <!-- <a class="project-link" href="#">Check it out</a> -->
   </div>
 </div>
 <div class="user-projects">
   <div class="images-left">
-    <img alt="mountains" src="{{ "/assets/img/skate.jpg" | prepend: site.baseurl }}" />
+    <img alt="pipeline" src="{{ "/assets/img/pipeline.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents-right">
-    <h3> Project Title </h3>
+    <h3> Enterprise ML Pipeline </h3>
     <ul>
-      <li> Featured Skills</li>
+      <li> PySpark </li>
+      <li> OOP Python </li>
+      <li> Deep Learning </li>
+      <li> Distributed Computing </li>
     </ul>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-    <a class="project-link" href="#">Check it out</a>
+    <p>A Python and Spark-based pipeline for time series forecasting. This required high levels of organization and thoughtfulness surrounding the underlying infrastructure's scalability. Ultimately this system processed many terabytes of data at scale with high availability requirements. </p>
+    <!-- <a class="project-link" href="#">Check it out</a> -->
+  </div>
+</div>
+<div class="user-projects">
+  <div class="images-right">
+    <img alt="anomaly" src="{{ "/assets/img/anomaly.jpg" | prepend: site.baseurl }}" />
+  </div>
+  <div class="contents-left">
+    <h3> Anomaly Detection Service </h3>
+    <ul>
+      <li> Time Series Modeling </li>
+      <li> Bayesian Modeling </li>
+      <li> OOP Python Package </li>
+      <li> API Development </li>
+    </ul>
+    <p>An object-oriented Python package designed to ingest univariate time-series datasets and detect change points and anomalies in the given data. From testing various design paradigms to deploying the package as a Flask API endpoint, this project ultimately delivered a long-term solution to a very common problem. </p>
+    <!-- <a class="project-link" href="#">Check it out</a> -->
+  </div>
+</div>
+<div class="user-projects">
+  <div class="images-left">
+    <img alt="confidential" src="{{ "/assets/img/confidential.jpg" | prepend: site.baseurl }}" />
+  </div>
+  <div class="contents-right">
+    <h3> Confidential Project </h3>
+    <ul>
+      <li> Distributed Cluster </li>
+      <li> Dask </li>
+    </ul>
+    <p>Seriously can't say...</p>
+    <!-- <a class="project-link" href="#">Check it out</a> -->
   </div>
 </div>
