--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -44,6 +44,7 @@
       <li> Bayesian Modeling </li>
       <li> OOP Python Package </li>
       <li> API Development </li>
+      <li> AWS Lambda</li> 
     </ul>
     <p>An object-oriented Python package designed to ingest univariate time-series datasets and detect change points and anomalies in the given data. From testing various design paradigms to deploying the package as a Flask API endpoint, this project ultimately delivered a long-term solution to a very common problem. </p>
     <!-- <a class="project-link" href="#">Check it out</a> -->
@@ -56,10 +57,11 @@
   <div class="contents-right">
     <h3> Confidential Project </h3>
     <ul>
-      <li> Distributed Cluster </li>
+      <li> Python </li> 
       <li> Dask </li>
+      <li> AWS EMR </li>
     </ul>
-    <p>Seriously can't say...</p>
+    <p>Can't say much ... </p>
     <!-- <a class="project-link" href="#">Check it out</a> -->
   </div>
 </div>
