--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,32 +1,40 @@
  <div class="user-details">
-  <h1> Niche Expertise </h1>
+  <h1> Niche Expertise</h1>
   <p> {{site.user_description}} </p>
 </div>
   <div class="user">
     <div class="tech">
       <h2>Finance</h2>
-      <i class="devicon-html5-plain-wordmark"></i>
-      <i class="devicon-bootstrap-plain-wordmark colored"></i>
-      <i class="devicon-sass-original colored"></i>
-      <p>Info about finance</p>
+      <i><img src="https://img.icons8.com/fluent/96/000000/microsoft-excel-2019.png"/></i>
+      <i><img src="https://img.icons8.com/color/96/000000/microsoft-sql-server.png"/></i>
+      <i><img src="https://img.icons8.com/ios-filled/100/000000/mysql-logo.png"/></i>
+      <i></i>
+      <p>From working on one of the first Regulation A+ IPOs with W. R. Hambrecht, 
+        investment bankers for Apple and Google IPOs, to building out the entire technology
+        stack for a commercial real estate company and his candidacy in the CFA program, Taylor
+        brings a wealth of experience and technical knowledge for financial clients.
+      </p>
     </div>
     <div class="tech">
       <h2>Software Development</h2>
-      <i class="devicon-python-plain-wordmark colored"></i>
-      <i class="devicon-apache-line-wordmark colored"></i>
-      <i class="devicon-docker-plain-wordmark colored"></i>
-      <p>Some info about the value I offer with coding</p>
+      <i><img src="https://img.icons8.com/color/96/000000/python.png"/></i>
+      <i><img src="https://img.icons8.com/color/96/000000/docker.png"/></i>
+      <i class="devicon-github-plain-wordmark colored"></i>
+      <p>Taylor's experience in front-end development to a full-stack focus at a Fortune 100 bank
+        positions him well to understand the nuances of new projects in a sleu of industries. Taylor
+        believes a long-term vision and a ruthless focus on value should be paramount.
+      </p>
     </div>
     <div class="tech">
       <h2>Machine Learning</h2>
-      <i class="devicon-github-plain-wordmark colored"></i>
+      <i class="devicon-amazonwebservices-plain-wordmark colored"></i>
+      <i><img src="https://img.icons8.com/color/96/000000/kubernetes.png"/></i>
       <i> 
         <img alt="keras" src="{{ "/assets/img/keras.ico" | prepend: site.baseurl }}" />
       </i>
-      <i> 
-        <img alt="tf" src="{{ "/assets/img/tensorflow.svg" | prepend: site.baseurl }}" />
-      </i>
-      <i class="devicon-atom-original-wordmark"></i>
-      <p>info about machine learning</p>
+      <p>From his time at a quantitative hedge fund and a private real estate fund to his many years at 
+        one of the top banking institutions in North America, Taylor's experience in applying machine Learning
+        technology to real-world business problems is as much deep as it is wide.
+      </p>
     </div>
 </div>
