--- a/_includes/about.html
+++ b/_includes/about.html
@@ -5,10 +5,9 @@
   <div class="user">
     <div class="tech">
       <h2>Finance</h2>
-      <i><img src="https://img.icons8.com/fluent/96/000000/microsoft-excel-2019.png"/></i>
-      <i><img src="https://img.icons8.com/color/96/000000/microsoft-sql-server.png"/></i>
-      <i><img src="https://img.icons8.com/ios-filled/100/000000/mysql-logo.png"/></i>
-      <i></i>
+      <i><img src="https://img.icons8.com/fluent/101/000000/microsoft-excel-2019.png"/></i>
+      <i><img src="https://img.icons8.com/color/101/000000/microsoft-sql-server.png"/></i>
+      <i><img src="https://img.icons8.com/ios-filled/110/000000/mysql-logo.png"/></i>
       <p>From working on one of the first Regulation A+ IPOs with W. R. Hambrecht, 
         investment bankers for Apple and Google IPOs, to building out the entire technology
         stack for a commercial real estate company and his candidacy in the CFA program, Taylor
@@ -17,21 +16,19 @@
     </div>
     <div class="tech">
       <h2>Software Development</h2>
-      <i><img src="https://img.icons8.com/color/96/000000/python.png"/></i>
-      <i><img src="https://img.icons8.com/color/96/000000/docker.png"/></i>
-      <i class="devicon-github-plain-wordmark colored"></i>
+      <i><img src="https://img.icons8.com/color/100/000000/python.png"/></i>
+      <i><img src="https://img.icons8.com/color/100/000000/docker.png"/></i>
+      <i><img src="https://img.icons8.com/fluent/100/000000/github.png"/></i>
       <p>Taylor's experience in front-end development to a full-stack focus at a Fortune 100 bank
-        positions him well to understand the nuances of new projects in a sleu of industries. Taylor
+        positions him well to understand the nuances of new projects in a sleu of industries. Taylor 
         believes a long-term vision and a ruthless focus on value should be paramount.
       </p>
     </div>
     <div class="tech">
       <h2>Machine Learning</h2>
-      <i class="devicon-amazonwebservices-plain-wordmark colored"></i>
-      <i><img src="https://img.icons8.com/color/96/000000/kubernetes.png"/></i>
-      <i> 
-        <img alt="keras" src="{{ "/assets/img/keras.ico" | prepend: site.baseurl }}" />
-      </i>
+      <i><img src="https://img.icons8.com/color/96/000000/amazon-web-services.png"/></i>
+      <i><img src="https://img.icons8.com/color/100/000000/kubernetes.png"/></i>
+      <i><img alt="keras" src="{{ "/assets/img/keras.ico" | prepend: site.baseurl }}" /></i>
       <p>From his time at a quantitative hedge fund and a private real estate fund to his many years at 
         one of the top banking institutions in North America, Taylor's experience in applying machine Learning
         technology to real-world business problems is as much deep as it is wide.
