--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -1,5 +1,5 @@
 <div class="user-details">
-  <h1> Featured Projects </h1>
+  <h1> Highlights from Taylor's Portfolio</h1>
 </div>
 <div class="user-projects">
   <div class="images-right">
@@ -13,7 +13,7 @@
       <li> Tradestation® </li> 
       <li> Risk management optimization</li>
     </ul>
-    <p>Hedge funds required a fully-automated trading platform from trade creation to trade submission and risk tolerance management. I planned and developed the hedge fund’s derivatives trading platform. The algorithmic side of the hedge fund required expertise in both supervised and unsupervised machine learning algorithms. I was recognized as the subject matter expert for tactical coding of trading algorithms in Object-Oriented Easy Language®.</p>
+    <p>Hedge funds require a fully-automated trading platform from trade creation to trade submission and risk tolerance management. I planned and developed the hedge fund’s derivatives trading platform. The algorithmic side of the hedge fund required expertise in both supervised and unsupervised machine learning algorithms. I was recognized as the subject matter expert for tactical coding of trading algorithms in Object-Oriented Easy Language®.</p>
     <!-- <a class="project-link" href="#">Check it out</a> -->
   </div>
 </div>
