fixing a couple things

--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -13,8 +13,11 @@
       <li> Tradestation® </li> 
       <li> Risk management optimization</li>
     </ul>
-    <p>Hedge funds require a fully-automated trading platform from trade creation to trade submission and risk tolerance management. I planned and developed the hedge fund’s derivatives trading platform. The algorithmic side of the hedge fund required expertise in both supervised and unsupervised machine learning algorithms. I was recognized as the subject matter expert for tactical coding of trading algorithms in Object-Oriented Easy Language®.</p>
-    <!-- <a class="project-link" href="#">Check it out</a> -->
+    <p>Hedge funds require a fully-automated trading platform from trade creation to trade 
+      submission and risk tolerance management. Taylor planned and developed the hedge fund’s derivatives 
+      trading platform. The algorithmic side of the hedge fund required expertise in both supervised 
+      and unsupervised machine learning algorithms. Taylor was recognized as the subject matter expert for 
+      tactical coding of trading algorithms in Object-Oriented Easy Language®.</p>
   </div>
 </div>
 <div class="user-projects">
@@ -29,8 +32,10 @@
       <li> Deep Learning </li>
       <li> Distributed Computing </li>
     </ul>
-    <p>A Python and Spark-based pipeline for time series forecasting. This required high levels of organization and thoughtfulness surrounding the underlying infrastructure's scalability. Ultimately this system processed many terabytes of data at scale with high availability requirements. </p>
-    <!-- <a class="project-link" href="#">Check it out</a> -->
+    <p>A Python and Spark-based pipeline for time series forecasting. This required high levels of 
+      organization and thoughtfulness surrounding the underlying infrastructure's scalability. 
+      Ultimately this system processed many terabytes of data at scale with high availability 
+      requirements all while materially reducing the forecasts error -- the real value. </p>
   </div>
 </div>
 <div class="user-projects">
@@ -46,8 +51,10 @@
       <li> API Development </li>
       <li> AWS Lambda</li> 
     </ul>
-    <p>An object-oriented Python package designed to ingest univariate time-series datasets and detect change points and anomalies in the given data. From testing various design paradigms to deploying the package as a Flask API endpoint, this project ultimately delivered a long-term solution to a very common problem. </p>
-    <!-- <a class="project-link" href="#">Check it out</a> -->
+    <p>An object-oriented Python package designed to ingest univariate time-series datasets and detect 
+      change points and anomalies in the given data. From testing various design paradigms to deploying 
+      the package as a Flask API on AWS, this project ultimately delivered a long-term, extensible solution to a 
+      very common problem. </p>
   </div>
 </div>
 <div class="user-projects">
@@ -62,6 +69,25 @@
       <li> AWS EMR </li>
     </ul>
     <p>Can't say much ... </p>
-    <!-- <a class="project-link" href="#">Check it out</a> -->
   </div>
 </div>
+<div class="user-projects">
+  <div class="images-right">
+    <img alt="nerd" src="{{ "/assets/img/nerd.jpg" | prepend: site.baseurl }}" />
+  </div>
+  <div class="contents-left">
+    <h3> Personal Budgeting Tool </h3>
+    <ul>
+      <li> R </li> 
+      <li> Personal Finances </li>
+      <li> Budgeting </li>
+      <li> Financial Analysis </li> 
+    </ul>
+    <p>Anyone who has worked with Taylor, knows he is definitely a nerd at heart. In his personal time, 
+      he enjoys thinking about how to analyze data better and glean move value from simplicity. He built
+      this simple tool for his personal life to track and understand where and how he can improve the management
+      of his own capital. Check out his <a href="https://github.com/taylorfturner/personalFinancialBudgeting">github repo</a> for more!
+    </p>
+  </div>
+</div>
+
