--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,9 +6,9 @@
       </h1>
       <div class="header-icons">
         <a aria-label="Send email" href="mailto: taylorfturner@gmail.com"><i class="icon fa fa-envelope"></i></a>
-        <a aria-label="My Twitter" target="_blank" href="https://twitter.com/taylorfturner"><i class="icon fa fa-twitter" aria-hidden="true"></i></a>
-        <a aria-label="My Github" target="_blank" href="https://github.com/taylorfturner"><i class="icon fa fa-github-alt" aria-hidden="true"></i></a>
-        <a aria-label="My Linkedin" target="_blank" href="https://www.linkedin.com/in/taylorturneriv/"><i class="icon fa fa-linkedin" aria-hidden="true"></i></a>
+        <a aria-label="Twitter" target="_blank" href="https://twitter.com/taylorfturner"><i class="icon fa fa-twitter" aria-hidden="true"></i></a>
+        <a aria-label="Github" target="_blank" href="https://github.com/taylorfturner"><i class="icon fa fa-github-alt" aria-hidden="true"></i></a>
+        <a aria-label="Linkedin" target="_blank" href="https://www.linkedin.com/in/taylorturneriv/"><i class="icon fa fa-linkedin" aria-hidden="true"></i></a>
       </div>
       <div class="header-links">
         <a class="link" href="#about" data-scroll>About Me</a>
