--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,6 +5,7 @@
         <span class="site-description">{{site.user_title}}</span>
       </h1>
       <div class="header-icons">
+        <a aria-label="Phone Call" href="tel: +18043579308"><i class="icon fa fa-phone" aria-hidden="true"></i></a>
         <a aria-label="Send email" href="mailto: taylorfturner@gmail.com"><i class="icon fa fa-envelope"></i></a>
         <a aria-label="Twitter" target="_blank" href="https://twitter.com/taylorfturner"><i class="icon fa fa-twitter" aria-hidden="true"></i></a>
         <a aria-label="Github" target="_blank" href="https://github.com/taylorfturner"><i class="icon fa fa-github-alt" aria-hidden="true"></i></a>
