rescaled range analysis

--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -2,6 +2,20 @@
   <h1> Highlights from Taylor's Portfolio</h1>
 </div>
 <div class="user-projects">
+  <div class="images-left">
+    <img alt="rescaledranges" src="{{ "/assets/img/rescaledranges.jpg" | prepend: site.baseurl }}" />
+  </div>
+  <div class="contents-right">
+    <h3> Hurst Rescaled Ranges </h3>
+    <ul>
+      <li> Python </li>
+      <li> Plotly </li> 
+      <li> Yahoo API </li>
+    </ul>
+    <p> Hurst Exponent rescaled ranges </p>
+  </div>
+</div>
+<div class="user-projects">
   <div class="images-right">
     <img alt="hedge_fund" src="{{ "/assets/img/hedge_fund.jpg" | prepend: site.baseurl }}" />
   </div>
