--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -10,9 +10,14 @@
     <ul>
       <li> Python </li>
       <li> Plotly </li> 
+      <li> Prefect </li>
       <li> Yahoo API </li>
     </ul>
-    <p> Hurst Exponent rescaled ranges </p>
+    <p>Python package allowing for you to run and tinker with Hurst's rescaled range on your favorite ticker! 
+      Using Prefect's design paradigm of tasks and flows, you can specify your flow parameters as a list of ticker
+    symbols, run the main flow, and voila! The code will output a plotly chart with the rescaled range values plotted along
+  with the underlying's series over time. Interested? Read more in the <a href=https://taylorfturner.github.io/rescaledranges/build/html/index.html>
+  docs</a></p>
   </div>
 </div>
 <div class="user-projects">
