--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,5 +1,6 @@
  <div class="user-details">
   <h1> Niche Expertise</h1>
+  <i><img src="https://img.icons8.com/fluent/101/000000/head_shot_taylor.png"/></i>
   <p> {{site.user_description}} </p>
 </div>
   <div class="user">
