update locale of image and text

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,7 +1,11 @@
  <div class="user-details">
   <h1> Niche Expertise</h1>
-  <i><img src="https://img.icons8.com/fluent/101/000000/head_shot_taylor.png"/></i>
-  <p> {{site.user_description}} </p>
+  <div class="images-left">
+    <img alt="rescaledranges" src="{{ "/assets/img/head_shot_taylor.png" | prepend: site.baseurl }}" />
+  </div>
+  <div class="contents-right">
+    <p> {{site.user_description}} </p>
+  </div>    
 </div>
   <div class="user">
     <div class="tech">
